[gd_scene load_steps=5 format=2]

[ext_resource path="res://live2d算法/头发动起来.gd" type="Script" id=1]
[ext_resource path="res://live2d算法/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://live2d算法/Panel.gd" type="Script" id=3]
[ext_resource path="res://live2d算法/panel_right.tres" type="ButtonGroup" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 476, 119, 335, 338 )
default_color = Color( 0, 0, 0, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 515.412, 302.033 )
current = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="anim_name" type="LineEdit" parent="CanvasLayer2"]
visible = false
margin_left = 277.0
margin_top = 215.0
margin_right = 580.0
margin_bottom = 255.0
placeholder_text = "please input anime name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok" type="Button" parent="CanvasLayer2/anim_name"]
margin_left = 174.0
margin_top = 44.0
margin_right = 247.0
margin_bottom = 77.0
text = "add_anim"

[node name="add_frame" type="Button" parent="CanvasLayer2/anim_name"]
margin_left = 88.0
margin_top = 43.0
margin_right = 166.0
margin_bottom = 76.0
text = "add_frame"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="Button" parent="CanvasLayer2/anim_name"]
margin_left = 251.0
margin_top = 44.0
margin_right = 304.0
margin_bottom = 77.0
text = "cancel"

[node name="about" type="PopupPanel" parent="CanvasLayer2"]
margin_left = 169.879
margin_top = 84.9394
margin_right = 911.879
margin_bottom = 520.939
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer2/about"]
margin_left = 4.0
margin_top = 4.0
margin_right = 738.0
margin_bottom = 432.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer2/about/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 421.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "OpenLive2d开源地址：（早期开发 c/opengl 主算法研究）"

[node name="openlive2d" type="LinkButton" parent="CanvasLayer2/about/Panel"]
margin_left = 12.0
margin_top = 33.0
margin_right = 286.0
margin_bottom = 47.0
text = "https://gitee.com/open-live2d/OpenLive2d"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer2/about/Panel"]
margin_left = 6.99661
margin_top = 51.9458
margin_right = 270.997
margin_bottom = 74.9458
custom_fonts/font = ExtResource( 2 )
text = "此项目地址（编辑器）："
__meta__ = {
"_edit_use_anchors_": false
}

[node name="editor" type="LinkButton" parent="CanvasLayer2/about/Panel"]
margin_left = 13.4983
margin_top = 78.6984
margin_right = 355.498
margin_bottom = 92.6984
focus_mode = 2
text = "https://gitee.com/small-sandbox/Godot_useful_codes"

[node name="Label3" type="Label" parent="CanvasLayer2/about/Panel"]
margin_left = 9.51648
margin_top = 104.863
margin_right = 273.516
margin_bottom = 127.863
custom_fonts/font = ExtResource( 2 )
text = "点击外部关闭窗口"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer2/about/Panel"]
margin_left = 9.51648
margin_top = 132.863
margin_right = 273.516
margin_bottom = 155.863
custom_fonts/font = ExtResource( 2 )
text = "作者qq:2439905184 欢迎加入开发"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="CanvasLayer2"]
margin_left = 154.708
margin_top = 51.6721
margin_right = 735.708
margin_bottom = 486.672
window_title = "打开文件"
mode = 0
access = 2
current_dir = "/Users/11111/Documents/GitHub/Godot_useful_codes"
current_path = "/Users/11111/Documents/GitHub/Godot_useful_codes/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 745.034
margin_top = 72.3171
margin_right = 970.034
margin_bottom = 430.317
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layer" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
margin_right = 44.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = ExtResource( 4 )
text = "图层"

[node name="resource" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
margin_left = 48.0
margin_right = 92.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = ExtResource( 4 )
text = "资源"

[node name="ske" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
margin_left = 96.0
margin_right = 140.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = ExtResource( 4 )
text = "骨架"

[node name="animation" type="Button" parent="CanvasLayer/Panel/HBoxContainer"]
margin_left = 144.0
margin_right = 188.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = ExtResource( 4 )
text = "动画"

[node name="add" type="Button" parent="CanvasLayer/Panel"]
margin_left = 199.285
margin_top = 4.33806
margin_right = 227.285
margin_bottom = 35.3381
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animes" type="VBoxContainer" parent="CanvasLayer/Panel"]
margin_left = 2.37842
margin_top = 47.5683
margin_right = 42.3784
margin_bottom = 87.5683
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item" type="HBoxContainer" parent="CanvasLayer/Panel/animes"]
margin_right = 39.0

[node name="ske_tree" type="Tree" parent="CanvasLayer/Panel"]
margin_left = 13.9899
margin_top = 46.5051
margin_right = 204.99
margin_bottom = 322.505
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tools" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 564.957
margin_top = 127.318
margin_right = 705.957
margin_bottom = 259.318
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add_point" type="Button" parent="CanvasLayer/tools"]
margin_right = 141.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "添加顶点"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="reset zoom" type="Button" parent="CanvasLayer/tools"]
margin_top = 33.0
margin_right = 141.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 2 )
text = "重置视图缩放"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="add_key" type="Button" parent="CanvasLayer/tools"]
margin_top = 66.0
margin_right = 141.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 2 )
text = "添加关键帧"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "添加关键帧"
}

[node name="add_ske" type="Button" parent="CanvasLayer/tools"]
margin_top = 99.0
margin_right = 141.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 2 )
text = "添加骨架"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "添加关键帧"
}

[node name="edit_mesh" type="Button" parent="CanvasLayer/tools"]
margin_top = 132.0
margin_right = 141.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 2 )
text = "编辑网格"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "添加关键帧"
}

[node name="fps" type="Label" parent="CanvasLayer"]
margin_left = 17.5639
margin_top = 552.567
margin_right = 57.5639
margin_bottom = 566.567
rect_scale = Vector2( 2, 2 )
text = "fps"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBar" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 7.85721
margin_top = 6.17354
margin_right = 225.857
margin_bottom = 46.1735
__meta__ = {
"_edit_use_anchors_": false
}

[node name="openfile" type="Button" parent="CanvasLayer/MenuBar"]
margin_right = 76.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "打开文件"

[node name="import_img" type="Button" parent="CanvasLayer/MenuBar"]
margin_left = 80.0
margin_right = 188.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "导入图片资源"

[node name="savefile" type="Button" parent="CanvasLayer/MenuBar"]
margin_left = 192.0
margin_right = 268.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "保存文件"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="language" type="OptionButton" parent="CanvasLayer/MenuBar"]
margin_left = 272.0
margin_right = 333.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "语言"

[node name="zoom" type="Label" parent="CanvasLayer/MenuBar"]
margin_left = 337.0
margin_top = 12.0
margin_right = 385.0
margin_bottom = 26.0
text = "zoom:1"

[node name="about" type="Button" parent="CanvasLayer/MenuBar"]
margin_left = 389.0
margin_right = 433.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "关于"

[node name="edit_mode" type="Label" parent="CanvasLayer/MenuBar"]
margin_left = 437.0
margin_top = 8.0
margin_right = 549.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "当前模式：预览"

[node name="control_tip" type="Label" parent="CanvasLayer/MenuBar"]
margin_left = 553.0
margin_top = 8.0
margin_right = 633.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "操作提示："

[node name="window" type="OptionButton" parent="CanvasLayer/MenuBar"]
margin_left = 637.0
margin_right = 730.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "窗口开关"
items = [ "窗口开关", null, false, 0, null, "底部控制条", null, false, 1, null, "动画帧编辑器", null, false, 2, null, "资源编辑器", null, false, 3, null ]
selected = 0

[node name="MenuButton" type="MenuButton" parent="CanvasLayer/MenuBar"]
margin_left = 734.0
margin_right = 810.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "窗口开关"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim_frame_panel" type="Panel" parent="CanvasLayer"]
margin_left = 7.43539
margin_top = 87.4319
margin_right = 198.435
margin_bottom = 421.432
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add" type="Button" parent="CanvasLayer/anim_frame_panel"]
margin_left = 4.0
margin_top = 310.0
margin_right = 29.0
margin_bottom = 330.0
text = "+"

[node name="remove" type="Button" parent="CanvasLayer/anim_frame_panel"]
margin_left = 33.0
margin_top = 310.0
margin_right = 99.0
margin_bottom = 330.0
text = "-remove"

[node name="animes" type="VBoxContainer" parent="CanvasLayer/anim_frame_panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="tool_bar" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 330.6
margin_top = 494.71
margin_right = 370.6
margin_bottom = 534.71
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="CanvasLayer/tool_bar"]
margin_right = 76.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "播放动画"

[node name="set_time" type="Button" parent="CanvasLayer/tool_bar"]
margin_left = 80.0
margin_right = 188.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "设置时间补间"

[node name="set_bone" type="Button" parent="CanvasLayer/tool_bar"]
margin_left = 192.0
margin_right = 268.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "骨骼控制"

[node name="set_mesh" type="Button" parent="CanvasLayer/tool_bar"]
margin_left = 272.0
margin_right = 348.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "网格控制"

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 414.124, 254.299 )

[node name="File" type="MenuButton" parent="."]
margin_left = 8.23984
margin_top = 49.9499
margin_right = 43.2399
margin_bottom = 89.9498
text = "File"
items = [ "open", null, 1, false, false, 0, 0, null, "", false, "save", null, 1, false, false, 1, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bone2D" type="Bone2D" parent="."]
position = Vector2( 460.223, 310.383 )
rest = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Skeleton2D" type="Skeleton2D" parent="."]
position = Vector2( 453.088, 190.273 )

[connection signal="pressed" from="CanvasLayer2/anim_name/ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="CanvasLayer2/anim_name/add_frame" to="." method="_on_add_frame_pressed"]
[connection signal="pressed" from="CanvasLayer2/anim_name/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="CanvasLayer2/about/Panel/openlive2d" to="." method="_on_openlive2d_pressed"]
[connection signal="pressed" from="CanvasLayer2/about/Panel/editor" to="." method="_on_editor_pressed"]
[connection signal="file_selected" from="CanvasLayer2/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/ske" to="CanvasLayer/Panel" method="_on_ske_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/animation" to="CanvasLayer/Panel" method="_on_animation_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="CanvasLayer/tools/add_point" to="." method="_on_add_point_pressed"]
[connection signal="pressed" from="CanvasLayer/tools/reset zoom" to="." method="_on_reset_zoom_pressed"]
[connection signal="pressed" from="CanvasLayer/tools/add_ske" to="." method="_on_add_ske_pressed"]
[connection signal="pressed" from="CanvasLayer/tools/edit_mesh" to="." method="_on_add_ske_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuBar/openfile" to="." method="_on_openfile_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuBar/import_img" to="." method="_on_import_img_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuBar/savefile" to="." method="_on_savefile_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuBar/about" to="." method="_on_about_pressed"]
[connection signal="pressed" from="CanvasLayer/anim_frame_panel/add" to="." method="_on_anim_frame_add_pressed"]
[connection signal="pressed" from="CanvasLayer/tool_bar/play" to="." method="_on_play_pressed"]
[connection signal="about_to_show" from="File" to="." method="_on_File_about_to_show"]
[connection signal="pressed" from="File" to="." method="_on_File_pressed"]
